fix: implement correct text-overflow in reviews slider

--- a/bigBear/pages/main/main.css
+++ b/bigBear/pages/main/main.css
@@ -484,6 +484,7 @@ img {
 
 .reviews__slider-text {
   overflow: hidden;
+  text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 8;
   -webkit-box-orient: vertical;
