--- a/bigBear/pages/main/src/_reviews.scss
+++ b/bigBear/pages/main/src/_reviews.scss
@@ -15,6 +15,7 @@
 }
 .reviews__slider-text {
     overflow: hidden;
+    text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 8;
     -webkit-box-orient: vertical;
